cassiopeia-cluster/infra/traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      nodeSelector:
        ingress-ready: "true"
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
      containers:
        - name: traefik
          image: traefik:v3.1
          args:
            - --entrypoints.web.address=:80
            - --providers.kubernetesgateway
          ports:
            - name: web
              containerPort: 80
              hostPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
